--- a/.docker/conf/php/xdebug.ini
+++ b/.docker/conf/php/xdebug.ini
@@ -2,4 +2,5 @@ xdebug.remote_enable = 1
 xdebug.remote_autostart = 1
 xdebug.remote_connect_back = 0
 xdebug.remote_idekey = PHPSTORM
+xdebug.remote_port=9000
 xdebug.remote_log=/tmp/xdebug.log
