--- a/.docker/conf/nginx/default.conf
+++ b/.docker/conf/nginx/default.conf
@@ -3,11 +3,11 @@ server {
     server_name api.clinicarx.local;
 
     # root directive should be global
-    root   /var/www/clinicarx.api/webroot/;
+    root   /var/www/html/clinicarx.api/webroot/;
     index  index.php;
 
-    access_log /var/www/clinicarx.api/logs/access.log;
-    error_log /var/www/clinicarx.api/logs/error.log;
+    access_log /var/www/html/clinicarx.api/logs/access.log;
+    error_log /var/www/html/clinicarx.api/logs/error.log;
 
     location / {
         try_files $uri $uri/ /index.php?$args;
@@ -29,7 +29,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    root /var/www/clinicarx.app;
+    root /var/www/html/clinicarx.app;
     index index.html;
 
     location = /favicon.ico {
