--- a/.docker/conf/php/Dockerfile
+++ b/.docker/conf/php/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.1-fpm
+FROM php:7.1.11-fpm
 
 RUN apt-get update && apt-get install -y \
         libfreetype6-dev \
@@ -6,12 +6,22 @@ RUN apt-get update && apt-get install -y \
         libmcrypt-dev \
         libpng-dev \
         libicu-dev \
+        libicu-dev \
         libpq-dev \
         libxpm-dev \
         libvpx-dev \
         libldap2-dev \
-    && pecl install xdebug \
-    && docker-php-ext-enable xdebug \
+        zlib1g-dev \
+        libzmq-dev \
+        wget \
+        git
+
+RUN ln -fs /usr/lib/x86_64-linux-gnu/libldap.so /usr/lib/
+
+RUN pecl install xdebug
+RUN pecl install zmq-beta
+
+RUN docker-php-ext-enable xdebug \
     && docker-php-ext-install -j$(nproc) mcrypt \
     && docker-php-ext-install -j$(nproc) gd \
     && docker-php-ext-install -j$(nproc) intl \
@@ -26,8 +36,16 @@ RUN apt-get update && apt-get install -y \
         --with-freetype-dir=/usr/include/ \
         --with-jpeg-dir=/usr/include/ \
         --with-xpm-dir=/usr/lib/x86_64-linux-gnu/ \
-        --with-vpx-dir=/usr/lib/x86_64-linux-gnu/ 
-        
+        --with-vpx-dir=/usr/lib/x86_64-linux-gnu/ \
+    && docker-php-ext-enable zmq
+
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- \
 --install-dir=/usr/bin --filename=composer && chmod +x /usr/bin/composer 
+
+#Istall wkhtmltopdf
+RUN apt-get install -y libfontconfig1 libxrender1
+
+RUN curl "https://downloads.wkhtmltopdf.org/0.12/0.12.4/wkhtmltox-0.12.4_linux-generic-amd64.tar.xz" -L -o "wkhtmltopdf.tar.xz" \
+    && tar Jxvf wkhtmltopdf.tar.xz \
+    && mv wkhtmltox/bin/wkhtmltopdf /usr/local/bin/wkhtmltopdf
